--- a/administration/templates/administration/base.html
+++ b/administration/templates/administration/base.html
@@ -45,6 +45,7 @@
     /* small screen overlay body lock */
     .offcanvas-open { overflow: hidden; }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.8/dist/htmx.min.js" integrity="sha384-/TgkGk7p307TH7EXJDuUlgG3Ce1UVolAOFopFekQkkXihi5u/6OCvVKyz1W+idaz" crossorigin="anonymous"></script>
 </head>
 <body class="h-full antialiased text-slate-900 bg-slate-50 dark:text-slate-100 dark:bg-slate-900">
 
